opam-version: "2.0"
name: "sortedseq_intersect"
version: "0.1.0"
maintainer: "Fermin Reig"
authors: ["Fermin Reig"]
homepage: "https://github.com/ferminr/ocaml_sortedseq_intersect"
bug-reports: "https://github.com/ferminr/ocaml_sortedseq_intersect/issues"
dev-repo: "git+https://github.com/ferminr/ocaml_sortedseq_intersect.git"
doc: "https://github.com/ferminr/ocaml_sortedseq_intersect"
license: "MIT"
synopsis: "A divide-and-conquer algorithm in OCaml for the intersection of sorted sequences"
description: """
The algorithm is described in this paper:

Fast Intersection Algorithms for Sorted Sequences
Ricardo Baeza-Yates and Alejandro Salinger
Algorithms and Applications 2010 (LNCS 6060, pp. 45–61)
"""
depends: [
  "ocaml" {>= "4.08.0"}
  "dune"  {>= "2.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
